# jobhunt-mcp

./: .gitignore  APPLY.md  README.md  auto.py  autosync.sh  autosync.vps.sh  autosync_prompt.md  briefing.conf.example  com.jobhunt.autosync.plist.example  com.jobhunt.briefing.plist.example  config.py  conftest.py  daily_briefing.py  imap.conf.example  imap_fetch.py  publish.py  pyproject.toml  requirements.txt  score.py  server.py  targets.yaml  tracker.py
commands/: jobhunt-applied.md  jobhunt-autosync.md  jobhunt-brief.md  jobhunt-cover.md  jobhunt-draft.md  jobhunt-prep.md  jobhunt-referrals.md  jobhunt-search.md  jobhunt-setup.md  jobhunt-stats.md  jobhunt-sync.md  jobhunt-today.md
cover/: draft.py
feeds/: __init__.py  _comp.py  _filters.py  _http.py  _location.py  adzuna.py  amazon.py  ashby.py  greenhouse.py  jobspy.py  lever.py  netflix.py  remotive.py  workday.py
referrals/: match.py
resume/: profile.example.yaml  render_pdf.py  tailor.py
tests/: test_auto.py  test_comp.py  test_feeds.py  test_location.py  test_score.py
