[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunt-mcp"
version = "1.0.0"
description = "Personal, read-only job-search assistant exposed to Claude as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "fpdf2>=2.8",
    "mcp>=1.10",
]

[project.optional-dependencies]
# Enables publishing the dashboard snapshot to Turso for the web /admin page.
admin = ["libsql>=0.1"]
# Enables the Indeed/Google supplemental scrape (preferences.enable_jobspy). Heavy.
jobspy = ["python-jobspy>=1.1.80", "pandas>=2.2"]
# Test suite.
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
jobhunt-mcp = "server:main"

# Flat layout: the app is a set of top-level modules plus a few packages.
[tool.setuptools]
py-modules = ["server", "score", "tracker", "config", "daily_briefing", "publish"]
packages = ["feeds", "resume", "cover", "referrals"]
