[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunt-mcp"
version = "1.0.0"
description = "Personal, read-only job-search assistant exposed to Claude as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "fpdf2>=2.8",
    # <2: SDK v2 (2026-07) renames mcp.server.fastmcp.FastMCP to MCPServer.
    # Migrate deliberately, not via an ambient resolver upgrade.
    "mcp>=1.10,<2",
]

[project.optional-dependencies]
# Enables publishing the dashboard snapshot to Turso for the web /admin page.
admin = ["libsql>=0.1"]
# Enables the Indeed/Google supplemental scrape (preferences.enable_jobspy). Heavy.
# Pinned below 1.2: this library scrapes hostile targets and a release could
# rename the DataFrame columns feeds/jobspy.py maps.
jobspy = ["python-jobspy>=1.1.82,<1.2", "pandas>=2.2"]
# Test suite.
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
jobhunt-mcp = "server:main"

# Flat layout: the app is a set of top-level modules plus a few packages.
[tool.setuptools]
py-modules = ["server", "score", "tracker", "config", "auto", "daily_briefing", "publish"]
packages = ["feeds", "resume", "cover", "referrals"]
